// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.model;
option go_package = "github.com/kapetaniosci/pipe/pkg/model";

import "validate/validate.proto";

message Application {
    // The generated unique identifier.
    // This is generated by concatenating project_id and env_name and name.
    string id = 1 [(validate.rules).string.min_len = 1];
    // The name of the application.
    string name = 2 [(validate.rules).string.min_len = 1];
    // The name of environment this application belongs to.
    string env = 3 [(validate.rules).string.min_len = 1];
    // The ID of the runner that should handle this application.
    string runner_id = 4 [(validate.rules).string.min_len = 1];
    // The ID of the project this enviroment belongs to.
    string project_id = 5 [(validate.rules).string.min_len = 1];
    // The git hosting service. e.g. github.com.
    string git_host = 6 [(validate.rules).string.min_len = 1];
    string org = 7 [(validate.rules).string.min_len = 1];
    string repo = 8 [(validate.rules).string.min_len = 1];
    string branch = 9 [(validate.rules).string.min_len = 1];
    string path = 10 [(validate.rules).string.min_len = 1];
    string config_path = 11;
    bool disabled = 13;
    // Unix time when the application is created.
    int64 created_at = 14 [(validate.rules).int64.gt = 0];
    // Unix time of the last time when the application is updated.
    int64 updated_at = 15 [(validate.rules).int64.gt = 0];
}
